--- a/collections.html
+++ b/collections.html
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse teal borderYtoX" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-3">
                     <li class="nav-item active">
-                        <a class="custom-link" href="#">HOME</a>
+                        <a class="custom-link" href="Index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="custom-link" href="collections.html">COLLECTIONS</a>
+                        <a class="custom-link" href="#">COLLECTIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="custom-link" href="#">MARKET</a>
@@ -52,40 +52,48 @@
         </nav>
     </header>
     <section>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
         <div class="container">
-            <div class="row justify-content-between">
-                <div class=" col- col-sm-12 col-md-10 col-xl-7 col-lg-7">
-                    <img class="img-1" src="assets/img/img1.png">
-                </div> 
-                <div class="col-sm-8 col-md-8 col-xl-4 col-lg-4">
-                    <h1>Collect & Sell rare NFT's on one of the leading platform</h1>
-                    <hr>
-                    <p class="h4">Be the part of the best community in NFT space</p>
-                </div> 
-            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-10">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="carusel-img" src="assets/img/img_1.jpg">
+                        </div>
+                        <div class="item">
+                            <img class="carusel-img" src="assets/img/img_2.jpg">
+                        </div>
+                        <div class="item">
+                            <img class="carusel-img" src="assets/img/img_3.jpg">
+                        </div>
+                        <div class="item">
+                            <img class="carusel-img" src="assets/img/img_4.jpg">
+                        </div>       
+                        <div class="item">
+                            <img class="carusel-img" src="assets/img/img_5.jpg">
+                        </div> 
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+            </div>   
         </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="row d-flex justify-content-between">
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3 ">
-                    <div class="custom-col">
-                        <p class="p-info h2">30K+ <br> Artwork</p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
-                    <div class="custom-col" >
-                        <p class="p-info h2 ">10K+ <br> Artists</p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
-                    <div class="custom-col">
-                        <p class="p-info h2">50k+ Active Users</p>
-                    </div>
-                </div>
             </div>
-        </div>
-    </section>
+        </section> 
     <footer class="bd-footer py-2">
         <div class="container py-2">
             <div class="row justify-content-center">
