--- a/about.html
+++ b/about.html
@@ -48,41 +48,52 @@
               </div>
         </nav>
     </header>
-    <section>
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class=" col- col-sm-12 col-md-10 col-xl-7 col-lg-7">
-                    <img class="img-1" src="assets/img/img1.png">
-                </div> 
-                <div class="col-sm-8 col-md-8 col-xl-4 col-lg-4">
-                    <h1>Collect & Sell rare NFT's on one of the leading platform</h1>
-                    <hr>
-                    <p class="h4">Be the part of the best community in NFT space</p>
-                </div> 
+<section>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center">
+                <h2 class="h1 custom-h-4">Welcome to Magic NFT</h2>
+                <p class="h3 custom-h-4">Home to the next generation of digital creators</p>
             </div>
         </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="row d-flex justify-content-between">
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3 ">
-                    <div class="custom-col">
-                        <p class="p-info h2">30K+ <br> Artwork</p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
-                    <div class="custom-col" >
-                        <p class="p-info h2 ">10K+ <br> Artists</p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
-                    <div class="custom-col">
-                        <p class="p-info h2">50k+ Active Users</p>
-                    </div>
-                </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-sm-6 col-md-10 col-xl-4 col-lg-3">
+                <img src="assets/img/img.svg">
+            </div>
+            <div class="col-sm-5 col-md-10 col-xl-6 col-lg-5">
+                <p class="h4 custom-h-4">Magic NFT is a community-centric company. We work hard to be responsive, close to the ground, and in service to the best interests of our collections. To prove our commitment to the community, we airdropped Magic Ticket, our own collection, to over 30,000 users. Holding a Magic Ticket gives holders access to our discord-based DAO, MagicDAO, where we deliver interconnectivity via social programs and rewards to the community.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row justify-content-start">
+            <div class="col-sm-8 col-md-10 col-xl-5 col-lg-5 text-center">
+                <h2 class="h1 custom-h-4">We are supported by the top firms who care about crypto and web3</h2>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+       <div class="row justify-content-center">
+          <div class="col-sm-8 col-xl-2 col-2 col-lg-3">
+             <img src="assets/img/binance.svg">
+          </div>
+          <div class="col-sm-8 col-xl-2 col-2 col-lg-2">
+             <img src="assets/img/eth.svg">
+          </div>
+          <div class="col-sm-8 col-xl-2 col-2 col-lg-3">
+             <img src="assets/img/block.svg">
+          </div>
+       </div>
+    </div>
+ </section>
     <footer class="bd-footer py-2">
         <div class="container py-2">
             <div class="row justify-content-center">
