--- a/collections.html
+++ b/collections.html
@@ -11,13 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <!-- =============JS============= -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- =============JS============= -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
     <!-- =============title============= -->
     <link rel="icon" href="assets/img/logo.svg" type="imige/icon type">
     <title>NFT</title>
@@ -38,10 +39,7 @@
                         <a class="custom-link" href="#">COLLECTIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="custom-link" href="#">MARKET</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="custom-link" href="#">ABOUT</a>
+                        <a class="custom-link" href="about.html">ABOUT</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -52,17 +50,30 @@
         </nav>
     </header>
     <section>
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
+                    <div class="custom-col-2">
+                        <h2 class="h1 custom-h1">Upcoming Projects</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
-        <!-- Wrapper for slides -->
+        <!-- Wrapper for slides --> 
         <div class="container">
             <div class="row d-flex justify-content-center">
-                <div class="col-10">
+                <div class="col-12">
                     <div class="carousel-inner">
                         <div class="item active">
                             <img class="carusel-img" src="assets/img/img_1.jpg">
@@ -94,6 +105,42 @@
         </div>
             </div>
         </section> 
+        <section class="section-1">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                       <div class="card card-custom-1">
+                           <img class="card-img-top card-img-custom" src="assets/img/img_1.jpg" alt="Card image cap">
+                           <div class="card-body">
+                               <h6 class="card-title card-text-custom-1">Anime NFT</h6>
+                               <p class="card-text card-text-custom-1 h4">Date: 18/05/2022 <br>Current Bid: 50 Solana</p>
+                               <a href="#" class="btn  btn-custom px-5 py-3">Place Bid</a>
+                           </div>
+                         </div>
+                    </div>
+                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                       <div class="card card-custom-1">
+                           <img class="card-img-top card-img-custom" src="assets/img/img_2.jpg" alt="Card image cap">
+                           <div class="card-body card-body-custom">
+                               <h6 class="card-title card-text-custom-1"> Gang NFT</h6>
+                               <p class="card-text card-text-custom-1 h4">Date: 18/05/2022 <br>Current Bid: 50 Solana</p>
+                               <a href="#" class="btn  btn-custom px-5 py-3">Place Bid</a>
+                           </div>
+                         </div>
+                    </div>
+                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                       <div class="card card-custom-1">
+                           <img class="card-img-top card-img-custom" src="assets/img/img_3.jpg" alt="Card image cap">
+                           <div class="card-body">
+                               <h6 class="card-title card-text-custom-1">Spiderman NFT</h6>
+                               <p class="card-text card-text-custom-1 h4">Date: 18/05/2022 <br>Current Bid: 50 Solana</p>
+                               <a href="#" class="btn btn-custom px-5 py-3">Place Bid</a>
+                           </div>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <footer class="bd-footer py-2">
         <div class="container py-2">
             <div class="row justify-content-center">
