--- a/Index.html
+++ b/Index.html
@@ -51,10 +51,10 @@
     <section>
         <div class="container">
             <div class="row justify-content-between">
-                <div class=" col- col-sm-12 col-md-10 col-xl-7 col-lg-7">
+                <div class=" col-12 col-sm-12 col-md-12 col-xl-5 col-lg-5">
                     <img class="img-1" src="assets/img/img1.png">
                 </div> 
-                <div class="col-sm-8 col-md-8 col-xl-4 col-lg-4">
+                <div class="col-sm-8 col-md-10 col-xl-4 col-lg-4">
                     <h1>Collect & Sell rare NFT's on one of the leading platform</h1>
                     <hr>
                     <p class="h4">Be the part of the best community in NFT space</p>
@@ -64,18 +64,18 @@
     </section>
     <section>
         <div class="container">
-            <div class="row d-flex justify-content-between">
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3 ">
+            <div class="row  justify-content-between">
+                <div class=" col-12 col-md-12 col-lg-3 col-xl-3 mt-5">
                     <div class="custom-col">
                         <p class="p-info h2">30K+ <br> Artwork</p>
                     </div>
                 </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
+                <div class=" col-12 col-md-12 col-lg-3 col-xl-3 mt-5">
                     <div class="custom-col" >
                         <p class="p-info h2 ">10K+ <br> Artists</p>
                     </div>
                 </div>
-                <div class="col-sm-3 col-md-10 col-xl-3 col-lg-3">
+                <div class="col-12 col-md-12 col-lg-3 col-xl-3 mt-5">
                     <div class="custom-col">
                         <p class="p-info h2">50k+ Active Users</p>
                     </div>
@@ -89,7 +89,7 @@
                 <div class="col-4">
                     <div class="list-unstyled align-items-center">
                         <h6>Get in touch</h6>
-                        <ul class="custom-ul">
+                        <ul class="custom-ul mt-5">
                             <li class="mb-2 custom-media"><a href="https://discord.com/" target="_blank"><img src="assets/img/discord.svg"></li>
                             <li class="mb-2 custom-media"><a href="https://www.binance.com/en/support/faq#/66" target="_blank"><img src="assets/img/bitcoin.svg"></a></li>
                             <li class="mb-2 custom-media"><a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.svg"></a></li>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-4 mt-5">
                     <p class="copyright">© NFT 2022. All rights reserved.</p>
                 </div>
             </div>
