--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse teal borderYtoX" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-3">
                     <li class="nav-item active">
-                        <a class="custom-link" href="#">HOME</a>
+                        <a class="custom-link" href="Index.html">HOME</a>
                     </li>
                     <li class="nav-item">
                         <a class="custom-link" href="collections.html">COLLECTIONS</a>
@@ -61,10 +61,10 @@
 <section>
     <div class="container">
         <div class="row justify-content-between">
-            <div class="col-sm-6 col-md-10 col-xl-4 col-lg-3">
+            <div class="col-12 col-md-12 col-xl-4 col-lg-3">
                 <img src="assets/img/img.svg">
             </div>
-            <div class="col-sm-5 col-md-10 col-xl-6 col-lg-5">
+            <div class="col-12 col-md-12 col-xl-6 col-lg-5">
                 <p class="h4 custom-h-4">Magic NFT is a community-centric company. We work hard to be responsive, close to the ground, and in service to the best interests of our collections. To prove our commitment to the community, we airdropped Magic Ticket, our own collection, to over 30,000 users. Holding a Magic Ticket gives holders access to our discord-based DAO, MagicDAO, where we deliver interconnectivity via social programs and rewards to the community.</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
 <section>
     <div class="container">
         <div class="row justify-content-start">
-            <div class="col-sm-8 col-md-10 col-xl-5 col-lg-5 text-center">
+            <div class="col-12 col-md-12 col-xl-5 col-lg-5 text-center">
                 <h2 class="h1 custom-h-4">We are supported by the top firms who care about crypto and web3</h2>
             </div>
         </div>
@@ -82,14 +82,14 @@
 <section>
     <div class="container">
        <div class="row justify-content-center">
-          <div class="col-sm-8 col-xl-2 col-2 col-lg-3">
-             <img src="assets/img/binance.svg">
+          <div class="col-9 col-xl-2 col-2 col-lg-3">
+             <img class="icons" src="assets/img/binance.svg">
           </div>
-          <div class="col-sm-8 col-xl-2 col-2 col-lg-2">
-             <img src="assets/img/eth.svg">
+          <div class="col-9 col-xl-2 col-2 col-lg-2">
+             <img class="icons" src="assets/img/eth.svg">
           </div>
-          <div class="col-sm-8 col-xl-2 col-2 col-lg-3">
-             <img src="assets/img/block.svg">
+          <div class="col-9 col-xl-2 col-2 col-lg-3">
+             <img class="icons" src="assets/img/block.svg">
           </div>
        </div>
     </div>
@@ -100,7 +100,7 @@
                 <div class="col-4">
                     <div class="list-unstyled align-items-center">
                         <h6>Get in touch</h6>
-                        <ul class="custom-ul">
+                        <ul class="custom-ul mt-5">
                             <li class="mb-2 custom-media"><a href="https://discord.com/" target="_blank"><img src="assets/img/discord.svg"></li>
                             <li class="mb-2 custom-media"><a href="https://www.binance.com/en/support/faq#/66" target="_blank"><img src="assets/img/bitcoin.svg"></a></li>
                             <li class="mb-2 custom-media"><a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.svg"></a></li>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-4 mt-5">
                     <p class="copyright">© NFT 2022. All rights reserved.</p>
                 </div>
             </div>
