--- a/collections.html
+++ b/collections.html
@@ -108,7 +108,7 @@
         <section class="section-1">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                    <div class=" col-12 col-md-12 col-xl-3 col-lg-4 text-center mt-5">
                        <div class="card card-custom-1">
                            <img class="card-img-top card-img-custom" src="assets/img/img_1.jpg" alt="Card image cap">
                            <div class="card-body">
@@ -118,7 +118,7 @@
                            </div>
                          </div>
                     </div>
-                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                    <div class=" col-12 col-md-12 col-xl-3 col-lg-4 text-center mt-5">
                        <div class="card card-custom-1">
                            <img class="card-img-top card-img-custom" src="assets/img/img_2.jpg" alt="Card image cap">
                            <div class="card-body card-body-custom">
@@ -128,7 +128,7 @@
                            </div>
                          </div>
                     </div>
-                    <div class="col-sm-4 col-md-10 col-xl-3 col-lg-4 text-center">
+                    <div class="col-12 col-md-12 col-xl-3 col-lg-4 text-center mt-5">
                        <div class="card card-custom-1">
                            <img class="card-img-top card-img-custom" src="assets/img/img_3.jpg" alt="Card image cap">
                            <div class="card-body">
@@ -147,7 +147,7 @@
                 <div class="col-4">
                     <div class="list-unstyled align-items-center">
                         <h6>Get in touch</h6>
-                        <ul class="custom-ul">
+                        <ul class="custom-ul mt-5">
                             <li class="mb-2 custom-media"><a href="https://discord.com/" target="_blank"><img src="assets/img/discord.svg"></li>
                             <li class="mb-2 custom-media"><a href="https://www.binance.com/en/support/faq#/66" target="_blank"><img src="assets/img/bitcoin.svg"></a></li>
                             <li class="mb-2 custom-media"><a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.svg"></a></li>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-4 mt-5">
                     <p class="copyright">© NFT 2022. All rights reserved.</p>
                 </div>
             </div>
